--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,17 +73,102 @@ body{
     display: block;
     text-align: center;
     width: max-content;
+    word-wrap: normal;
     margin: auto 0;
     margin-left: 5%;
+    margin-right: 10%;
     padding: 2px 10px;
   }
 
-  .ans{
+  .ans {
   border: solid gray;
   -webkit-transform: skewy(-3deg);
   background-color: #333;
   font-family: 'Squada One', cursive;
   font-size: 24px;
+  z-index: 1;
+  text-shadow: 
+        1px 1px 0px blue, 
+        2px 2px 0px #999,
+        3px 3px 0px blue;
+  color:white;
+  display: block;
+  text-align: center;
+  width: max-content;
+  margin: auto 0;
+  margin-left: 5%;
+  padding: 2px 10px;
+}
+
+#timer{
+  border: solid gray;
+  -webkit-transform: skewy(-3deg);
+  background-color: #333;
+  font-family: 'Squada One', cursive;
+  font-size: 30px;
+  z-index: 1;
+  text-shadow: 
+        1px 1px 0px blue, 
+        2px 2px 0px #999,
+        3px 3px 0px blue;
+  color:white;
+  display: block;
+  text-align: center;
+  width: max-content;
+  margin: auto 0;
+  margin-left: 5%;
+  padding: 2px 10px;
+}
+
+#loses{
+  border: solid gray;
+  -webkit-transform: skewy(-3deg);
+  background-color: #333;
+  font-family: 'Squada One', cursive;
+  font-size: 30px;
+  z-index: 1;
+  text-shadow: 
+        1px 1px 0px blue, 
+        2px 2px 0px #999,
+        3px 3px 0px blue;
+  color:white;
+  display: block;
+  text-align: center;
+  width: max-content;
+  margin: auto 0;
+  margin-left: 5%;
+  padding: 2px 10px;
+}
+
+#wins{
+  border: solid gray;
+  -webkit-transform: skewy(-3deg);
+  background-color: #333;
+  font-family: 'Squada One', cursive;
+  font-size: 30px;
+  z-index: 1;
+  text-shadow: 
+        1px 1px 0px blue, 
+        2px 2px 0px #999,
+        3px 3px 0px blue;
+  color:white;
+  display: block;
+  text-align: center;
+  width: max-content;
+  margin: auto 0;
+  margin-left: 5%;
+  padding: 2px 10px;
+}
+
+#start {
+  position: relative;
+  top: 30%;
+  left: 10%;
+  border: solid gray;
+  -webkit-transform: skewy(-3deg);
+  background-color: #333;
+  font-family: 'Squada One', cursive;
+  font-size: 40px;
   z-index: 1;
   text-shadow: 
         1px 1px 0px blue, 
